# yap

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
.github/: pull.yml
.github/workflows/: bazel.yml  bzlmod-archive.yml
